syntax = "proto3";
option go_package = "./;pe";

service EdgeForSource {
  rpc AddSource (AddSourceRequest) returns (AddSourceResponse) {}
  rpc SendFrame (SourceSendFrameRequest) returns (SourceSendFrameResponse) {}
  rpc RemoveSource(RemoveSourceRequest) returns(RemoveSourceResponse){}
}

message AddSourceRequest {
  string address = 1;
  int64 fps = 2;
}

message AddSourceResponse {
  int64 id = 1;
}

message SourceSendFrameRequest {
  int64 source = 1;
  int64 index = 2;
  bytes content = 3;
}

message SourceSendFrameResponse {}

message RemoveSourceRequest {
  int64 id = 1;
}

message RemoveSourceResponse {}

service EdgeForCloud {
  rpc UpdateModel (CloudUpdateModelRequest) returns (CloudUpdateModelResponse) {}
}

message CloudUpdateModelRequest {
  int64 source = 1;
  int64 epoch = 2;
  bytes model = 3;
}

message CloudUpdateModelResponse {}